--- a/askme_demirel.conf
+++ b/askme_demirel.conf
@@ -6,7 +6,7 @@ upstream gunicorn {
 
 server {
     gzip on;
-    gzip_types text/css text/javascript application/javascript application/json application/xml image/svg+xml image/jpeg image/png image/svg+xml;
+    gzip_types text/css text/javascript application/javascript application/json application/xml image/svg+xml image/jpeg image/png;
 
 
     listen 80;
